# async-io-pipe

./: Cargo.toml  LICENSE  README.md
.depl/: config.yaml
.github/workflows/: .pipe.build.sh  .pipe.ci.sh  build.yml  ci.yml
src/: lib.rs  pipe_reader.rs
