[package]
name = "async-io-pipe"
description = "Pipe your stdout/stderr together with asynchronous streams"
version = "0.1.0"
edition = "2024"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
license = "MIT"
repository = "https://github.com/impulse-sw/async-io-pipe"

[dependencies]
nix = { version = "0.30" }
tokio = { version = "1", features = ["io-std", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
