[package]
name = "async-io-pipe"
description = "Pipe your stdout/stderr together with asynchronous streams"
version = "0.1.0"
edition = "2024"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]
license = "MIT"
repository = "https://github.com/impulse-sw/async-io-pipe"

[dependencies]
tokio = { version = "1", features = ["io-std", "net", "sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
